<resources>
    <string name="app_name">IMDMarket</string>
    <string name="imd_market">IMD Market</string>
    <string name="delete_product">DELETE PRODUCT</string>
    <string name="product_code">product code</string>
    <string name="_1234567">1234567</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="product_description">Product description</string>
    <string name="stock_quantity">stock quantity</string>
    <string name="product_name">Product name</string>
    <string name="save">save</string>
    <string name="clear">clear</string>
    <string name="product_name_example">product name example</string>
    <string name="register_product">register product</string>
    <string name="product_description_example">product description example…</string>
    <string name="_123456789">123456789</string>
    <string name="login">Login</string>
    <string name="example_something_com">example@something.com</string>
    <string name="e_mail">e-mail</string>
    <string name="forgot_my_password">forgot my password</string>
    <string name="password_hint">****************</string>
    <string name="password">Password</string>
    <string name="returnTxt">return</string>
    <string name="update_product">update product</string>
    <string name="this_is_an_example_of_a_description">this is an example of a description</string>
</resources>